Registrasi & Login (Generate token) note : "consume api sesuai role"